# PlayerTribute-Builder

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: CMakeLists.txt  conan.cmake  main.cpp
src/player_tribute/: player_tribute.cpp  player_tribute.h
src/utils/: binary_writer.h  file_manager.h
